[gd_scene load_steps=4 format=3 uid="uid://djfu3y1bixylw"]

[ext_resource type="Texture2D" uid="uid://ba5j211j53x8v" path="res://assets/images/ui/title-image.png" id="1"]
[ext_resource type="FontFile" path="res://theme/HeadingsFont.tres" id="2"]
[ext_resource type="Script" path="res://contexts/pregame/scenes/TitleScene.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("2")
text = "Super Awesome Game"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("1")

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["GamepadSelectable"]]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["GamepadSelectable"]]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["GamepadSelectable"]]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["GamepadSelectable"]]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
